src/main/java/com/example/nya_shopping/controller/error/RecordNotFoundException.java
package com.example.nya_shopping.controller.error;

public class RecordNotFoundException extends RuntimeException {
    public RecordNotFoundException(String message) {
        super(message);
    }
}
